# pronunciation_trainer

./: README.md  learner_input.json  no_header_readme.md  prompt.md  pyproject.toml  requirements.txt
audios/learner/: book.aac
docs/: grapheme_based_solution.md  phoneme_based_solution.md
src/pronunciation_trainer/: app.py  config.py  evaluation.py  llm.py  loading.py  rich_logging.py  scripts.py  transcription.py
