[project]
name = "pronunciation-trainer"
version = "0.1.0"
description = "Grapheme and Phoneme-Based Pronounciation Trainer"
authors = [{ name = "Pascal Wenker", email = "pwenker@posteo.de" }]
dependencies = [
  "gradio>=4.29.0",
  "transformers>=4.40.2",
  "torch>=2.3.0",
  "torchaudio>=2.3.0",
  "setuptools>=69.5.1",
  "phonemizer>=3.2.1",
  "langchain>=0.1.19",
  "langchain_openai>=0.1.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
